# browser-stack

./: .gitignore  Makefile  README.md
agent/: .env.example  Dockerfile  pyproject.toml  railway.toml
agent/runtime/: app.py  browserbase_wsj.py  intent_dispatch.py  news_fetcher.py
agent/tests/: test_intent_dispatch.py
docs/: RESUMEN_NOTICIAS_ESTRUCTURA.md  STREAMING_PLAN.md
ui/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/chat/: route.ts
ui/src/app/api/chat/stream/: route.ts
ui/src/app/api/morning-shot/: route.ts
ui/src/app/api/news-summary/: route.ts
ui/src/app/api/wsj-morning-shot/: route.ts
