[project]
name = "finance-agent"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "yfinance>=0.2.40",
  "openai>=1.0.0",
  "browserbase>=1.4.0",
  "playwright>=1.49.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]
